add connection details to the cr status
remove unneeded connection sync

update generated redis crd

Signed-off-by: Henry Zeng <zeng_zh@foxmail.com>

--- a/package/crds/redis.alibaba.crossplane.io_redisinstances.yaml
+++ b/package/crds/redis.alibaba.crossplane.io_redisinstances.yaml
@@ -184,10 +184,21 @@ spec:
                   dbInstanceStatus:
                     description: DBInstanceStatus specifies the current state of this database.
                     type: string
+                  endpoint:
+                    description: Endpoint contains address and port used to connect with the Redis instance
+                    properties:
+                      address:
+                        description: Address specifies the DNS address of the Redis instance.
+                        type: string
+                      port:
+                        description: Port specifies the port that the database engine is listening on.
+                        type: string
+                    type: object
                 required:
                 - accountReady
                 - connectionReady
                 - dbInstanceID
+                - endpoint
                 type: object
               conditions:
                 description: Conditions of the resource.
