make vpc and vswitch id not optional
Signed-off-by: Henry Zeng <zeng_zh@foxmail.com>

--- a/package/crds/redis.alibaba.crossplane.io_redisinstances.yaml
+++ b/package/crds/redis.alibaba.crossplane.io_redisinstances.yaml
@@ -92,6 +92,7 @@ spec:
                     description: NetworkType is indicates service network type NetworkType：CLASSIC/VPC
                     type: string
                   port:
+                    default: 6379
                     description: Port is indicates the database service port
                     type: integer
                   regionId:
