--- a/examples/provider.yaml
+++ b/examples/provider.yaml
@@ -16,4 +16,4 @@ spec:
       namespace: crossplane-system
       name: alibaba-account-creds
       key: credentials
-  region: cn-beijing
+  region: eu-central-1
