make all integer parameter pointer so they are not generated by json with value 0
Signed-off-by: Henry Zeng <zeng_zh@foxmail.com>

--- a/package/crds/redis.alibaba.crossplane.io_redisinstances.yaml
+++ b/package/crds/redis.alibaba.crossplane.io_redisinstances.yaml
@@ -84,7 +84,7 @@ spec:
                     type: string
                   capacity:
                     description: 'The storage capacity of the instance. Unit: MB. Note: You must specify at least one of the Capacity and InstanceClass parameters when you call this operation.'
-                    type: string
+                    type: integer
                   chargeType:
                     description: "ChargeType is indicates payment type Default value: PrePaid. Valid values: \t\tPrePaid: subscription \t\tPostPaid: pay-as-you-go"
                     type: string
