--- a/package/crds/alibaba.crossplane.io_providerconfigs.yaml
+++ b/package/crds/alibaba.crossplane.io_providerconfigs.yaml
@@ -1,10 +1,9 @@
-
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.3.0
+    controller-gen.kubebuilder.io/version: v0.8.0
   creationTimestamp: null
   name: providerconfigs.alibaba.crossplane.io
 spec:
@@ -31,13 +30,18 @@ spec:
     name: v1beta1
     schema:
       openAPIV3Schema:
-        description: A ProviderConfig configures an Alibaba Cloud 'provider', i.e. a connection to a particular cloud account.
+        description: A ProviderConfig configures an Alibaba Cloud 'provider', i.e.
+          a connection to a particular cloud account.
         properties:
           apiVersion:
-            description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            description: 'APIVersion defines the versioned schema of this representation
+              of an object. Servers should convert recognized schemas to the latest
+              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
             type: string
           kind:
-            description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            description: 'Kind is a string value representing the REST resource this
+              object represents. Servers may infer this from the endpoint the client
+              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
             type: string
           metadata:
             type: object
@@ -48,7 +52,8 @@ spec:
                 description: Credentials required to authenticate to this provider.
                 properties:
                   env:
-                    description: Env is a reference to an environment variable that contains credentials that must be used to connect to the provider.
+                    description: Env is a reference to an environment variable that
+                      contains credentials that must be used to connect to the provider.
                     properties:
                       name:
                         description: Name is the name of an environment variable.
@@ -57,7 +62,8 @@ spec:
                     - name
                     type: object
                   fs:
-                    description: Fs is a reference to a filesystem location that contains credentials that must be used to connect to the provider.
+                    description: Fs is a reference to a filesystem location that contains
+                      credentials that must be used to connect to the provider.
                     properties:
                       path:
                         description: Path is a filesystem path.
@@ -66,7 +72,8 @@ spec:
                     - path
                     type: object
                   secretRef:
-                    description: A SecretRef is a reference to a secret key that contains the credentials that must be used to connect to the provider.
+                    description: A SecretRef is a reference to a secret key that contains
+                      the credentials that must be used to connect to the provider.
                     properties:
                       key:
                         description: The key to select.
@@ -94,7 +101,8 @@ spec:
                 - source
                 type: object
               region:
-                description: Region for managed resources created using this Alibaba Cloud provider, e.g. "cn-hangzhou".
+                description: Region for managed resources created using this Alibaba
+                  Cloud provider, e.g. "cn-hangzhou".
                 type: string
             required:
             - credentials
@@ -109,20 +117,25 @@ spec:
                   description: A Condition that may apply to a resource.
                   properties:
                     lastTransitionTime:
-                      description: LastTransitionTime is the last time this condition transitioned from one status to another.
+                      description: LastTransitionTime is the last time this condition
+                        transitioned from one status to another.
                       format: date-time
                       type: string
                     message:
-                      description: A Message containing details about this condition's last transition from one status to another, if any.
+                      description: A Message containing details about this condition's
+                        last transition from one status to another, if any.
                       type: string
                     reason:
-                      description: A Reason for this condition's last transition from one status to another.
+                      description: A Reason for this condition's last transition from
+                        one status to another.
                       type: string
                     status:
-                      description: Status of this condition; is it currently True, False, or Unknown?
+                      description: Status of this condition; is it currently True,
+                        False, or Unknown?
                       type: string
                     type:
-                      description: Type of this condition. At most one of each condition type may apply to a resource at any point in time.
+                      description: Type of this condition. At most one of each condition
+                        type may apply to a resource at any point in time.
                       type: string
                   required:
                   - lastTransitionTime
